Fix long series description overlapping header on mobile

--- a/src/app/series-page/series-page.component.scss
+++ b/src/app/series-page/series-page.component.scss
@@ -11,6 +11,10 @@
   text-shadow: 0 0 20px #000;
 }
 
+.series-text {
+  padding-top: 7rem;
+}
+
 .mobile-share {
   font-family: 'Francois One', sans-serif;
   font-size: 22px;
